Show proudct image for specific variant

--- a/snippets/product.liquid
+++ b/snippets/product.liquid
@@ -99,7 +99,7 @@
 
 {%- capture product_gallery -%}
   {%- unless product == blank -%}
-    <div class="{{ product_gallery_class }}{{ product_gallery_modifiers }}"
+    <div class="{{ product_gallery_class }}{{ product_gallery_modifiers }} media_gallery_container"
       id="ProductPhoto--{{ unique }}"
       data-gallery="{{ enable_zoom }}"
       data-autoplay-video="false"
