--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -77,6 +77,7 @@
 
   {%- comment -%} CSS {%- endcomment -%}
   {{- 'theme.css' | asset_url | stylesheet_tag -}}
+  {{- 'main.css' | asset_url | stylesheet_tag -}}
 
   {%- comment -%}{{- 'theme.dev.css' | asset_url | stylesheet_tag -}}{%- endcomment -%}
 
