--- a/assets/main.css
+++ b/assets/main.css
@@ -1,1 +1,5 @@
-
+@media only screen and (max-width: 767px) {
+  section[data-section-type=custom-content] .brick__block--text {
+    order: 1;
+  }
+}
