--- a/src/scss/pages/pdp.scss
+++ b/src/scss/pages/pdp.scss
@@ -1,4 +1,5 @@
 .template--product {
+    //exactly
         --form-margin: 25px;
         --form-margin-mobile: 18px;
     .product-single__gallery{
