--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,7 +12,7 @@
     {{ 'lazysizes.min.js' | asset_url | preload_tag: as: 'script' }}
     {{ 'vendor.js' | asset_url | preload_tag: as: 'script' }}
     {{ 'theme.dev.js' | asset_url | preload_tag: as: 'script' }}
-  
+
     <link rel="preload" as="image" href="{{ 'loading.svg' | asset_url }}">{%- liquid
     assign loading_appearance = settings.loading_appearance
     assign image_width = settings.loading_image_width
@@ -224,7 +224,7 @@
   
     <script src="{{ 'vendor.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'theme.dev.js' | asset_url }}" defer="defer"></script>
-  
+    <script type="module" src="{{ 'custom-sections.js' | asset_url }}"></script>
     {%- comment -%}
       If you need to do some edits in Theme JS use theme.dev.js file
   
