--- a/sections/section-newsletter.liquid
+++ b/sections/section-newsletter.liquid
@@ -82,7 +82,7 @@
             data-aos-anchor="{{ animation_anchor }}"
             data-aos-delay="{{ animation_delay }}"
           {% endif %}>
-          {%- render 'newsletter-form',
+          {%- render 'newsletter-form-v2',
             unique: unique,
             extra_fields: section.settings.extra_fields,
             button_text: section.settings.button_text -%}
