--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -187,7 +187,7 @@
                 <div class="rte">{{- block.settings.text -}}</div>
               {%- endif -%}
 
-              {%- render 'newsletter-form', unique: block.id -%}
+              {%- render 'newsletter-form-v2', unique: block.id -%}
             </div>
 
           {%- when 'text' -%}
